[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sheeprlhf"
description = "RLHF accelerated by Lightning Fabric"
authors = [
  { name = "Refik Can Malli", email = "refikcan.malli@orobix.com" },
  { name = "Federico Belotti", email = "federico.belotti@orobix.com" },
  { name = "Davide Angioni", email = "davide.angioni@orobix.com" },
  { name = "Michele Milesi", email = "michele.milesi@orobix.com" },
]
keywords = [
  "reinforcement",
  "machine",
  "learning",
  "distributed",
  "production",
  "RLHF",
  "LLM",
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<3.11"
classifiers = ["Programming Language :: Python"]
dependencies = [
  "tensordict==0.2.*",
  "tensorboard>=2.10",
  "python-dotenv==1.0.0",
  "lightning==2.1.*",
  "hydra-core==1.3.2",
  "torchmetrics==1.2.0",
  "rich==13.5.*",
  "torch==2.1.*",
  "tqdm==4.65.0",
  "datasets==2.14.5",
  "transformers==4.35.0",
  "einops==0.6.1",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sheeprlhf", "sheeprlhf.*"]
exclude = ["tests*", "build*", "dist*", "notebooks*", "scripts"]

[project.scripts]
sheeprlhf = "sheeprlhf.cli:run"

[project.urls]
homepage = "https://eclecticsheep.ai"
repository = "https://github.com/Eclectic-Sheep/sheeprlhf"

[project.optional-dependencies]
test = ["pytest==7.4.3", "pytest-timeout==2.2.0", "pytest-cov==4.1.0"]
dev = [
  "pre-commit==3.5.0",
  "mypy==1.6.1",
  "isort==5.12.0",
  "ruff==0.1.4",
  "bumpver==2023.1124",
]
eval = [
  "gradio==3.47.1",
  "nltk==3.8.1",
  "rouge-score==0.1.2",
  "evaluate==0.4.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "venv",
]
extend-include = ["*.ipynb"]
target-version = "py310"
# Same as Black.
line-length = 120
indent-width = 4
# Enable Pyflakes `E` and `F` codes by default.
select = [
  "E",
  "W", # see: https://pypi.org/project/pycodestyle
  "F", # see: https://pypi.org/project/pyflakes
]
ignore = [
  "E731", # Do not assign a lambda expression, use a def
  "E402", # Module level import not at top of file
]
ignore-init-module-imports = true
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Adapted from https://realpython.com/pypi-publish-python-package/#version-your-package
[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "build: Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"sheeprlhf/__init__.py" = ["{version}"]

[tool.ruff.format]
# Black like options
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

# iSort
[tool.isort]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --disable-pytest-warnings"
markers = ["benchmark: mark test as a benchmark"]


[tool.interrogate]
ignore_init_method = true
ignore_init_module = false
ignore_magic = false
ignore_semiprivate = false
ignore_private = false
ignore_module = true
ignore_property_decorators = false
fail_under = 95
verbose = 2
omit_covered_files = false
quiet = false
whitelist_regex = []
color = true
exclude = ["notebooks"]
ignore_regex = ["^get$", "^mock_.*", ".*BaseClass.*"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
# suggested settings# # https://mypy.readthedocs.io/en/stable/existing_code.html?highlight=no_implicit_optional#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true

# skipped settings
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_reexport = false
warn_return_any = false
